Added progressive manifest

--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,7 @@
 <head>
   <title>ACQB Demo</title>
+  <link rel="manifest" href="manifest.json">
+  <meta name="mobile-web-app-capable" content="yes">
 </head>
 <body>
   <div id="render-target"></div>
