--- a/client/main.html
+++ b/client/main.html
@@ -1,7 +1,8 @@
 <head>
   <title>ACQB Demo</title>
-  <link rel="manifest" href="manifest.json">
-  <meta name="mobile-web-app-capable" content="yes">
+  <link rel="manifest" href="web_manifest.json"/>
+  <meta name="mobile-web-app-capable" content="yes"/>
+  <meta name="apple-mobile-web-app-capable" content="yes">
 </head>
 <body>
   <div id="render-target"></div>
