--- a/client/main.html
+++ b/client/main.html
@@ -2,7 +2,8 @@
   <title>ACQB Demo</title>
   <link rel="manifest" href="web_manifest.json"/>
   <meta name="mobile-web-app-capable" content="yes"/>
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes"/>
+  <meta name="viewport" content="width=device-width, initial-scale=0.36"/>
 </head>
 <body>
   <div id="render-target"></div>
